feat: add user apis, update readme and swagger docs
